--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,13 +3,13 @@
 name="Web"
 platform="Web"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../../../Desktop/build/StellarConstructor.html"
+export_path="../../../Desktop/build/index.html"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
